[gd_scene load_steps=31 format=3 uid="uid://cmuh1ipmewjvf"]

[ext_resource type="Shader" uid="uid://ctxb6wxr1n42h" path="res://shaders/hurt.gdshader" id="1_g8b3q"]
[ext_resource type="Script" uid="uid://ccyugayk801rd" path="res://scripts/characters/enemy_boat.gd" id="2_7mnuy"]
[ext_resource type="PackedScene" uid="uid://co0wsux68yvdp" path="res://scenes/characters/sailor.tscn" id="3_7mnuy"]
[ext_resource type="Texture2D" uid="uid://b1ocihbu04sdc" path="res://assets/boat-sail.png" id="3_eqdhx"]
[ext_resource type="Texture2D" uid="uid://ekkhbfqotawk" path="res://assets/livrea/livrea_a1.png" id="4_ehmk8"]
[ext_resource type="AudioStream" uid="uid://bdvtddvqp3tbp" path="res://assets/sounds/water-splash-03.mp3" id="4_eqdhx"]
[ext_resource type="Texture2D" uid="uid://f7xqgymvgmag" path="res://assets/livrea/livrea_b1.png" id="5_4675a"]
[ext_resource type="Texture2D" uid="uid://bebaitffrwg08" path="res://assets/boat-body.png" id="6_qgp2u"]
[ext_resource type="Shader" uid="uid://baiui31kxvioe" path="res://shaders/clip_y.gdshader" id="7_esofw"]
[ext_resource type="Texture2D" uid="uid://dbq5sma5e8p0i" path="res://assets/bubble.png" id="8_63e56"]
[ext_resource type="PackedScene" uid="uid://baxxi07n6ueq" path="res://scenes/weapons/enemy_gun.tscn" id="10_7mnuy"]
[ext_resource type="Script" uid="uid://7odss7vblhi3" path="res://scripts/weapons/barrel_emitter.gd" id="11_f2dgg"]
[ext_resource type="PackedScene" uid="uid://qq6f6q77h2af" path="res://scenes/weapons/barrel.tscn" id="12_01qfx"]
[ext_resource type="PackedScene" uid="uid://crk13ogv4r8r" path="res://scenes/weapons/barrel_primary.tscn" id="13_xxx83"]
[ext_resource type="PackedScene" uid="uid://dmhkg7iv7dwsv" path="res://scenes/weapons/barrel_secondary.tscn" id="14_m560j"]
[ext_resource type="AudioStream" uid="uid://u0ploi5nj0e6" path="res://assets/sounds/water-splash-01.mp3" id="16_eqdhx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ovt1e"]
resource_local_to_scene = true
shader = ExtResource("1_g8b3q")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21x0f"]
size = Vector2(7.38636, 7.06039)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5khh"]
shader = ExtResource("7_esofw")
shader_parameter/clip_y = 0.6

[sub_resource type="Curve" id="Curve_jgk6k"]
_data = [Vector2(0.520861, 0.976433), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ovt1e"]
curve = SubResource("Curve_jgk6k")

[sub_resource type="Curve" id="Curve_x5khh"]
_data = [Vector2(0.0955585, 0.431452), 0.0, 0.0, 0, 0, Vector2(1, 0.0912078), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hvulg"]
curve = SubResource("Curve_x5khh")

[sub_resource type="Curve" id="Curve_21x0f"]
_data = [Vector2(0.00807537, 0.362225), 0.0, 0.0, 0, 0, Vector2(0.317631, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_yj4uo"]
curve = SubResource("Curve_21x0f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f2e6v"]
particle_flag_disable_z = true
gravity = Vector3(-50, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
scale_max = 3.0
scale_curve = SubResource("CurveTexture_yj4uo")
alpha_curve = SubResource("CurveTexture_ovt1e")
hue_variation_min = -0.04
hue_variation_max = 0.05
hue_variation_curve = SubResource("CurveTexture_hvulg")

[sub_resource type="Animation" id="Animation_hvulg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClippingContainer/Boat:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ovt1e"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClippingContainer/Boat:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0261799, 0.0, -0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvulg"]
_data = {
&"RESET": SubResource("Animation_hvulg"),
&"idle": SubResource("Animation_ovt1e")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eqdhx"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_eqdhx")

[node name="EnemyBoat" type="Area2D" groups=["enemy"]]
material = SubResource("ShaderMaterial_ovt1e")
collision_layer = 64
collision_mask = 80
script = ExtResource("2_7mnuy")
health_max = 75
sailor_scene = ExtResource("3_7mnuy")
min_fire_time = 0.5
max_fire_time = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -74.5)
scale = Vector2(17.6, 22.52)
shape = SubResource("RectangleShape2D_21x0f")

[node name="ClippingContainer" type="Control" parent="."]
use_parent_material = true
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -141.0
offset_top = -167.0
offset_right = 139.0

[node name="Boat" type="Node2D" parent="ClippingContainer"]
use_parent_material = true
position = Vector2(141, 167)

[node name="Sail" type="Sprite2D" parent="ClippingContainer/Boat"]
use_parent_material = true
position = Vector2(2.95, -79)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_eqdhx")

[node name="Livrea" type="Node2D" parent="ClippingContainer/Boat/Sail"]
modulate = Color(1, 0, 1, 1)
use_parent_material = true
position = Vector2(2, 0)

[node name="LivreaA" type="Sprite2D" parent="ClippingContainer/Boat/Sail/Livrea"]
use_parent_material = true
texture = ExtResource("4_ehmk8")

[node name="LivreaB" type="Sprite2D" parent="ClippingContainer/Boat/Sail/Livrea"]
use_parent_material = true
texture = ExtResource("5_4675a")

[node name="Sailors" type="Node2D" parent="ClippingContainer/Boat"]
position = Vector2(1, -21)

[node name="Body" type="Sprite2D" parent="ClippingContainer/Boat"]
use_parent_material = true
position = Vector2(1.95, -79)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_qgp2u")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_x5khh")
position = Vector2(44, 3)
scale = Vector2(0.4, 0.4)
amount = 32
texture = ExtResource("8_63e56")
lifetime = 4.88
speed_scale = 6.0
visibility_rect = Rect2(-500, -500, 1000, 1000)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_f2e6v")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(1.1, 1)

[node name="DEBUGLabel" type="Label" parent="."]
visible = false
offset_left = -73.0
offset_top = -194.0
offset_right = 61.0
offset_bottom = -106.0
theme_override_font_sizes/font_size = 26
text = "Text"
horizontal_alignment = 1

[node name="GunTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BarrelTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyGun" parent="." instance=ExtResource("10_7mnuy")]
position = Vector2(-9, -72)

[node name="BarrelEmitter" type="Node2D" parent="."]
position = Vector2(-76, -14)
script = ExtResource("11_f2dgg")
barrel_scene = ExtResource("12_01qfx")
barrel_primary_scene = ExtResource("13_xxx83")
barrel_secondary_scene = ExtResource("14_m560j")
min_fire_time = 3.0
max_fire_time = 7.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hvulg")
}
autoplay = "idle"

[node name="HitAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -1)
stream = SubResource("AudioStreamRandomizer_eqdhx")
bus = &"Effects"

[node name="SinkAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -1)
stream = ExtResource("16_eqdhx")
bus = &"Effects"

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="BarrelTimer" to="." method="_on_barrel_timer_timeout"]
